fix(ci): make java proxy tests java8 compatible